<resources>
    <string name="app_name">简易天气</string>
    <string name="action_settings">Settings</string>
    <string name="location">安阳</string>
    <string name="tmp">温度</string>
    <string name="tmpC">°</string>
    <string name="weather">天气</string>
    <string name="pm">PM2.5</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="day1">周一</string>
    <string name="to">~</string>
    <string name="combrf">舒适指数</string>
    <string name="cwbrf">洗车指数</string>
    <string name="dress_brf">穿衣指数</string>
    <string name="srcfrom">数据来自\n百度API</string>
    <string name="aqi">空气质量:</string>
</resources>
