<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:id="@+id/swipe"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/content_bg"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"

            tools:context="com.wf.myndkdemo.MainActivity">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:drawableLeft="@drawable/ic_action_locate"
                    android:text="@string/location"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/srcfrom"
                    android:textColor="@color/gray"/>
            </RelativeLayout>

            <com.baidu.apistore.sdk.customfont.CustomFontsTextView
                android:id="@+id/tmp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="40dp"
                android:paddingTop="100dp"
                android:text="@string/tmp"
                android:textColor="@color/white"
                android:textSize="80sp"/>

            <com.baidu.apistore.sdk.customfont.CustomFontsTextView
                android:id="@+id/wea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:text="@string/weather"
                android:textColor="@color/white"
                android:textSize="24sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_bg"
                    android:text="@string/pm"
                    android:textColor="@color/center"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/pm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="50"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

            </LinearLayout>


            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="5dp"
                android:minHeight="5dp"
                android:paddingTop="10dp"
                android:progressDrawable="@drawable/progress_bg"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/gray"/>


            <include layout="@layout/layoutweekweather">

            </include>

            <include layout="@layout/layout_txt"></include>
        </LinearLayout>
    </ScrollView>

</android.support.v4.widget.SwipeRefreshLayout>
